--- a/Eshop/Views/Shared/_ForgotPassword.cshtml
+++ b/Eshop/Views/Shared/_ForgotPassword.cshtml
@@ -1,5 +1,9 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model Domain.Models.UserAgg.User
+
+<div style="direction: rtl; padding: 20px">
+    <h2>@Model.Email عزیز !</h2>
+    <p>جهت بازیابی حساب کاربری خود روی لینک زیر کلیک کنید</p>
+    <p>
+        <a href="https://TeamSample/Account/ResetPassword/@Model.ActiveCode">فعالسازی حساب کاربری</a>
+    </p>
+</div>
